[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/Title.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/Title.gd" type="Script" id=2]
[ext_resource path="res://themes/menu_theme.tres" type="Theme" id=4]

[node name="Title" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1270.0
margin_bottom = 720.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 152.0
margin_top = 176.0
margin_right = 432.0
margin_bottom = 696.0
rect_pivot_offset = Vector2( -688, 56 )
theme = ExtResource( 4 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "New Game"

[node name="Button6" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 280.0
margin_bottom = 153.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Select Stage"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 280.0
margin_bottom = 153.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Scoreboard"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 280.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Settings"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 267.0
margin_right = 280.0
margin_bottom = 331.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Credits"

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 356.0
margin_right = 280.0
margin_bottom = 420.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
